--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=TestePraticoSAAM
+application.vendor=infodba
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,14 +33,15 @@ dist.jar=${dist.dir}/TestePraticoSAAM.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/TestePraticoSAAM
+endorsed.classpath=
 excludes=
-file.reference.itext-2.1.7.jar=C:\\Users\\PATATI\\Downloads\\itext-2.1.7.jar
-file.reference.postgresql-42.7.5.jar=C:\\Users\\PATATI\\Downloads\\postgresql-42.7.5.jar
+file.reference.itext-2.1.7.jar=lib/itext-2.1.7.jar
+file.reference.postgresql-42.7.5.jar=lib/postgresql-42.7.5.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.postgresql-42.7.5.jar}:\
-    ${file.reference.itext-2.1.7.jar}
+    ${file.reference.itext-2.1.7.jar}:\
+    ${file.reference.postgresql-42.7.5.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -48,8 +50,8 @@ javac.modulepath=
 javac.processormodulepath=
 javac.processorpath=\
     ${javac.classpath}
-javac.source=21
-javac.target=21
+javac.source=1.8
+javac.target=1.8
 javac.test.classpath=\
     ${javac.classpath}:\
     ${build.classes.dir}
