--- a/nbproject/private/private.properties
+++ b/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=C:\\Users\\infodba.CVP\\AppData\\Roaming\\NetBeans\\25\\build.properties
+user.properties.file=C:\\Users\\PATATI\\AppData\\Roaming\\NetBeans\\25\\build.properties
